--- a/cordel/style.css
+++ b/cordel/style.css
@@ -6,9 +6,13 @@
     font-family: 'Passione One';
     src: url(fontes/PassionOne-Regular.otf);
 }
-body{
-    background-color: white;
+*{
     margin: 0px;
+    padding: 0px;
+}
+html, body{
+    min-height: 100vh;
+    background-color: white;
 }
 header{
     background-color: black;
@@ -17,19 +21,23 @@ header{
     padding: 20px;
 }
 header h1{
+    padding-top: 50px;
     font-family: 'Passione One', cursive;
-    margin: 0px;
     font-variant: small-caps;
     font-size: 10vw;
 }
 header p{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
-    margin: 10px 20px 20px 20px;
+    padding-bottom: 50px;
 }
 header a{
     text-decoration: none;
     color: white;
+    font-weight: bolder;
     text-shadow: 1px 1px 1px rgba(196, 193, 193, 0.418);
+}
+a:hover{
+    text-decoration: underline;
 }
 main{
     background-color: white;
@@ -73,7 +81,7 @@ main p#detalhe2{
 footer{
     background-color: black;
     color: white;
-    padding: 1px;
+    padding: 10px;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 12px;
